GNOME Bugzilla – Bug 597185
Setting preferred terminal to a known terminal doesn't set the exec arg gconf key
Last modified: 2009-10-23 22:27:32 UTC
Created attachment 144654 [details] [review] Update the exec_arg gconf key When I select xterm in the preferred terminal combo box, the exec arg gconf key is still set to the one from gnome-terminal (-x) instead of the one from xterm defined in the xml file (-e). Attaching a patch that fixes this.
Created attachment 144854 [details] [review] [defaultapplications] Update the exec arg when changing terminal Updated patch to fix a critical warning on startup.