Update the exec arg when changing terminal

When selecting a known terminal from the combo box, also update the exec
arg gconf key to the known value from the xml file.

https://bugzilla.gnome.org/show_bug.cgi?id=597185